hphp/hack/test/typecheck/array_assign_undefined_var.php.exp
File "array_assign_undefined_var.php", line 5, characters 3-16:
Variable $undefined_var is undefined, or not always defined (Naming[2050])
